fixed table overflow

--- a/style.css
+++ b/style.css
@@ -80,7 +80,7 @@ h1, p {
 
 .table-container {
     width: 100%;
-    height: calc(100% - 70px);
+    height: calc(100% - 47px); /* 100% (parent: by-country) - (32px + 15px) size of search container plus its margin*/
     overflow-y: auto;
 }
 
@@ -88,6 +88,10 @@ table {
     width: 100%;
     text-align: left;
     border-spacing: 0;
+}
+
+tr:first-child {
+    height: 30px;
 }
 
 td {
@@ -117,7 +121,8 @@ tbody:hover {
 .search-container {
     display: grid;
     grid-template-columns: 2fr 1fr 1fr;
-    margin: 14px 0;
+    margin: 0 0 15px 0;
+    height: 32px;
 }
 
 input {
